[REFACTOR] Add kebun assignment repository abstraction